    (Closes: #864182)
  * dh_installinit.1: Correct documentation which was inaccurate in relation
    to which compat levels where dh_installinit still supported systemd
    items and upstart jobs.  Thanks to Theodore Y. Ts'o for bring up the
    issue.
  * dh_installdeb: In compat 12, ignore the maintainer provided conffiles.
    It has not been useful since compat 3.

  [ Juhani Numminen ]
  * dh_installsystemd.1: Fix typo in manpage.
  * dh_installinit.1: Ditto.

 -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000

debhelper (11.3.5) unstable; urgency=medium

  * Dh_Lib.pm: Introduce a new glob_expand error handler to
    better emulate the old style glob code to fail when a
    non-glob entry in the config file is missing.
  * dh_installdocs: Use the new glob_expand error handler to
    restore the behaviour to that of debhelper/10.5.1 and older.
    Thanks to Christoph Berg for reporting the issue.
    (Closes: #902355)
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.
  * Dh_Lib.pm: Fix a bug where ending debian/control on (what
    debhelper believed was) a comment line could cause debhelper
    to omit the last package listed in the file.  Thanks to
    Santiago Vila for reporting the bug. (Closes: #902748)

 -- Niels Thykier <niels@thykier.net>  Sat, 30 Jun 2018 11:52:51 +0000

debhelper (11.3.4) unstable; urgency=medium

  * Dh_Lib.pm: Fix bug that made the parser assign the wrong
    value from the Build-Profiles field.  Thanks to Sven Joachim
    for reporting the bug.  (Closes: #902268)
  * debhelper.pod: Rewrite the compat 11 change on "main doc
    packages" in an attempt to clarify what is happening in
    compat 11.  Thanks to Paul Gevers for pointing out some of
    the confusing aspects.

 -- Niels Thykier <niels@thykier.net>  Sun, 24 Jun 2018 09:46:35 +0000

debhelper (11.3.3) unstable; urgency=medium

  [ Niels Thykier ]
  * d/control: Remove versioned Breaks on qt5-qmake as it